--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								
 								<h4><a name="education">Education</a></h4>
 								<ul class=" list-paddingleft-2">
-									<li><p>B.S Computer Science and Technology, School of Computer Science and Engineering, Nanjing University of Science and Technology(NJUST)</p></li>
+									<li><p>B.S Computer Science and Technology, <a href="http://cs.njust.edu.cn/">School of Computer Science and Engineering</a>, <a href="http://njust.edu.cn/">Nanjing University of Science and Technology</a>(NJUST)</p></li>
 									
 								</ul>
 								<hr>
@@ -96,7 +96,12 @@
 					</tbody>
 				</table>
 			</td>
+			
 		</tr>
+		<tr>
+			
+		</tr>
+
 		<tr>
 			<td width="423" bgcolor="#e1e1e1" height="15" colspan="2">
 				<span>&nbsp;Last updated 2019/07/18</span>
@@ -107,6 +112,6 @@
 </div>
 
 </div>
-
+<a href="https://clustrmaps.com/site/1atct"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=dG_Ocd98Zqdw_kVcXDeFIga8mSt_Mil8t7_wwGs6aGI&cl=ffffff" /></a>
 </html>
  
