--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 						<tr>
 							<td valign="top" width="50%" align="center"><h3>Liming Pu 蒲立明</h3>
 								<p><img src="./image/1.jpg" width="140" height="200" original_name="1.jpg"></p>
-								<p><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
+								<p><span>Undergraduate</span></p>
 							</td>
 							<td valign="top" width="50%">
 								<p>
-									<br><br><strong>Email:</strong><br>pu-liming@njust.edu.cn
+									<br><br><strong>Email:</strong><br>pu-liming[AT]njust.edu.cn
 									<br><br><strong>Phone:</strong><br>(+86)18833301260
 									<br><br><strong>Address:</strong><br>School of Computer Science and Engineering, Nanjing University of Science and Technology<br>No.200 Xiaolingwei Sreet, Xuanwu District, Nanjing, China
 								</p>
@@ -90,6 +90,7 @@
 								<h4><a name="others">Other Information</a></h4>
 								<p><a href="./resume.pdf">我的简历</a><br></p>
 								<hr>
+								<a href='https://clustrmaps.com/site/1atct'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=500&t=tt&d=dG_Ocd98Zqdw_kVcXDeFIga8mSt_Mil8t7_wwGs6aGI&co=2d78ad&ct=ffffff'/></a>
 								
 							</td>
 						</tr>
@@ -98,9 +99,9 @@
 			</td>
 			
 		</tr>
-		<tr>
-			<a href="https://clustrmaps.com/site/1atct"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=dG_Ocd98Zqdw_kVcXDeFIga8mSt_Mil8t7_wwGs6aGI&cl=ffffff" /></a>
-		</tr>
+		
+			
+		
 
 		<tr>
 			<td width="423" bgcolor="#e1e1e1" height="15" colspan="2">
